// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dropdown select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiFormControl-root Select-rootFull"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
      >
        <fieldset
          aria-hidden="true"
          class="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="MuiPrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="MuiSelect-root Select-root Select-rootFull"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select Select-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Select-input"
            role="button"
            tabindex="0"
          >
            text1
          </div>
          <input
            type="hidden"
            value="val1"
          />
          <svg
            class="SvgDropdownArrows-root MuiSelect-icon Select-icon"
            style="font-size: 1rem;"
            viewBox="0 0 16 16"
          >
            <g>
              <path
                d="M8.429 2.715l2.117 3.528a.5.5 0 0 1-.43.757H5.884a.5.5 0 0 1-.429-.757l2.117-3.528a.5.5 0 0 1 .858 0zM8.429 13.285l2.117-3.528a.5.5 0 0 0-.43-.757H5.884a.5.5 0 0 0-.429.757l2.117 3.528a.5.5 0 0 0 .858 0z"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders native select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiFormControl-root Select-rootFull"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
      >
        <fieldset
          aria-hidden="true"
          class="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="MuiPrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="MuiSelect-root Select-root Select-rootFull"
        >
          <select
            aria-invalid="false"
            class="MuiSelect-select Select-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Select-input"
          >
            <option
              value="val1"
            >
              text1
            </option>
            <option
              value="val2"
            >
              text2
            </option>
            <option
              value="val3"
            >
              text3
            </option>
          </select>
          <svg
            class="SvgDropdownArrows-root MuiSelect-icon Select-icon"
            style="font-size: 1rem;"
            viewBox="0 0 16 16"
          >
            <g>
              <path
                d="M8.429 2.715l2.117 3.528a.5.5 0 0 1-.43.757H5.884a.5.5 0 0 1-.429-.757l2.117-3.528a.5.5 0 0 1 .858 0zM8.429 13.285l2.117-3.528a.5.5 0 0 0-.43-.757H5.884a.5.5 0 0 0-.429.757l2.117 3.528a.5.5 0 0 0 .858 0z"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
